--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
 # Copy this file to .env.local for local development
 # Add these variables to Netlify dashboard for production
 
-# Firebase Configuration
-NEXT_PUBLIC_FIREBASE_API_KEY=your-firebase-api-key
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
-NEXT_PUBLIC_FIREBASE_APP_ID=your-app-id
+# Firebase Configuration (Project: meepotcl)
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAD1Q3ova1i0sii0N0XujlUFJ1hWTMCuNY
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=meepotcl.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=meepotcl
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=meepotcl.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=191068431187
+NEXT_PUBLIC_FIREBASE_APP_ID=1:191068431187:web:952d80fa6a0475e48a77a6
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-CSSC4YPCM6
 
 # NextAuth Configuration
 NEXTAUTH_SECRET=generate-with-openssl-rand-base64-32
