feat: Switch from Netlify to Firebase Hosting
- Configure Firebase Hosting with Next.js support
- Remove Netlify-specific files
- Add Firebase Hosting deployment guide
- Update README with Firebase deployment instructions
- Use Firebase's native framework hosting
- Project configured for meepotcl.web.app

--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,15 @@
 {
+  "hosting": {
+    "source": ".",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "frameworksBackend": {
+      "region": "us-central1"
+    }
+  },
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
@@ -15,6 +26,9 @@
     },
     "storage": {
       "port": 9199
+    },
+    "hosting": {
+      "port": 5000
     },
     "ui": {
       "enabled": true,
