--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,9 @@ NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-CSSC4YPCM6
 NEXTAUTH_SECRET=generate-with-openssl-rand-base64-32
 NEXTAUTH_URL=https://your-site.netlify.app
 
-# Google OAuth (optional)
-GOOGLE_CLIENT_ID=your-google-client-id
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+# Google OAuth (configured for meepotcl)
+GOOGLE_CLIENT_ID=191068431187-f5du9c943t13o5mmb26bpbbrgmoq0kpd.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret-here
 
 # OpenRouter AI (optional)
 OPENROUTER_API_KEY=your-openrouter-api-key
