--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "postbuild": "next-sitemap"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@auth/firebase-adapter": "^2.9.1",
